# online-chat

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: ci.yaml
client/: Cargo.toml
client/src/: lib.rs  main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
protocol/tests/: protocol_test.rs
server/: Cargo.toml
server/src/: client_manager.rs  lib.rs  main.rs
server/src/tests/: udp_echo.rs
server/tests/: client_manager_test.rs  udp_echo.rs
