[package]
name = "online-chat"
version = "0.1.0"
edition = "2024"


[workspace]
members = ["server", "client", "protocol"]


[workspace.package]
name = "online-chat"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
bytes = "1.10.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
